--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/logo (1).png">
-    <link rel="stylesheet" href="cover.css">
+    <link rel="stylesheet" href="style.css">
     <title>Cover Page</title>
 </head>
 <body>
